# 24x7sherpa

./: .env.example  .gitignore  README.md  connect-github.sh  package.json  pyproject.toml
api/: __init__.py  admin_routes.py  auth_crypto.py  auth_startup.py  deps.py  main.py  options_service.py  protected_routes.py  public_routes.py  run.py  schemas.py  services.py  user_store.py
scripts/: dev.sh
sherpa/: __init__.py  cli.py  cli_settings.py  config.py
sherpa/execution/: __init__.py  base.py  factory.py  paper.py  paper_options.py  simulation.py  simulation_paths.py
sherpa/execution/brokers/: __init__.py  alpaca.py
sherpa/options/: __init__.py  analyzer.py  constants.py  market_data.py  models.py
sherpa/providers/: __init__.py  base.py  news.py  prices.py
sherpa/recommendations/: __init__.py  criteria.py  daily.py
sherpa/risk/: __init__.py  limits.py
sherpa/signals/: __init__.py  engine.py
sherpa/technical/: __init__.py  indicators.py
sherpa/universe/: __init__.py  indices.py  sp500.py
tests/: test_api.py  test_daily_recommendations.py  test_indicators.py  test_paper_options.py  test_simulation_paths.py  test_universe_indices.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
web/src/: AdminView.tsx  App.tsx  AuthContext.tsx  AuthEntry.tsx  BusinessNewsView.tsx  DailyRankHistoryView.tsx  LoginView.tsx  OptionsView.tsx  SettingsView.tsx  SignUpView.tsx  TopNav.tsx  authStorage.ts  index.css  main.tsx  pickCriteria.ts
web/src/lib/: api.ts  dailyRankSnapshots.ts
