[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sherpa-trader"
version = "0.1.0"
description = "S&P 500 equity research, signals, and execution (paper → broker APIs)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "eval-type-backport>=0.2.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "yfinance>=0.2.40",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.scripts]
sherpa = "sherpa.cli:app"
sherpa-web = "api.run:main"

[tool.hatch.build.targets.wheel]
packages = ["sherpa"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
